# stocra-genesis

./: .gitignore  README.md  cli.py  pyproject.toml  redis_models.py
genesis/: __init__.py  blockchain_currencies.py  blockchain_types.py  blockchains.py  choices_enum.py  cli.py  constants.py  currencies.py  encoders.py  logging.py  models.py  profiling.py  token_types.py
genesis/blockchain/: adapter.py  constants.py  exceptions.py  factory.py  parser.py
genesis/blockchain/aptos/: adapter.py  parser.py
genesis/blockchain/aptos/tests/: conftest.py  test_parser.py
genesis/blockchain/aptos/tests/fixtures/: aptos_coin_transfer.py  block_meta_tx.py  native_transfer.py  native_transfer_failed.py
genesis/blockchain/bitcoin/: adapter.py  parser.py
genesis/blockchain/bitcoin/tests/: conftest.py  test_adapter.py  test_adapter_errors.py  test_parser.py
genesis/blockchain/bitcoin/tests/fixtures/: block.py  coinbase_transaction.py  pubkey_transaction.py
genesis/blockchain/cardano/: adapter.py  parser.py  queries.py
genesis/blockchain/cardano/tests/: conftest.py  test_parser.py
genesis/blockchain/cardano/tests/fixtures/: block.py  transaction.py
genesis/blockchain/dogecoin/: adapter.py  parser.py
genesis/blockchain/eos/: adapter.py  parser.py
genesis/blockchain/eos/tests/: conftest.py  test_parser.py
genesis/blockchain/eos/tests/fixtures/: eosio_token_transfer.py
genesis/blockchain/ethereum/: adapter.py  constants.py  parser.py  tokens.py
genesis/blockchain/ethereum/decoders/: decoder.py  erc20.py
genesis/blockchain/ethereum/decoders/tests/: test_erc20.py
genesis/blockchain/ethereum/tests/: conftest.py  test_adapter.py  test_parser.py
genesis/blockchain/ethereum/tests/fixtures/: block.py  transaction.py  transaction_erc20.py  transaction_erc20_failed.py  transaction_erc20_unknown.py  transaction_receipt.py  transaction_receipt_erc20.py  transaction_smart_contract_creation.py
genesis/blockchain/litecoin/: adapter.py  parser.py
genesis/blockchain/tests/: test_adapter.py  utils.py
genesis/tests/: test_constants.py  test_encoders.py  test_models.py
scripts/: lint  test
