[tool.poetry]
name = "genesis"
version = "0.5.8"
description = ""
authors = ["Lukáš Vokráčko <lukas@b2c2.com>"]

[tool.poetry.dependencies]
python = "^3.9"
logging518 = "*"
setuptools = "*"
requests = "*"
base58 = "*"
aiohttp = "*"
pydantic = "*"
orjson = "*"
asyncpg = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
isort = "*"
pytest = "*"
mccabe = "*"
typing-extensions = "*"
pytest-asyncio = "*"
aioresponses = "*"
flexmock = "*"
fire = "0.*"
pylint = "*"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.master]
max-line-length = 120
output-format = [
    "colorized",
]
load-plugins = [
    "pylint.extensions.mccabe",
]
ignore = [
    "tests",
]
disable = [
    "missing-docstring",
    "empty-docstring",
    "no-self-use",
    "no-else-return",
    "too-few-public-methods",
    "use-dict-literal",
]
extension-pkg-whitelist = [
    "pydantic",
]
max-complexity = 10

[tool.mypy]
python_version = 3.9
exclude = "test_*|cli.py"
cache_dir = "/dev/null"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
ignore_missing_imports = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest.ini_options]
cache_dir = "/dev/null"

[tool.logging518]
version = 1
disable_existing_loggers = 0

[tool.logging518.formatters.standard]
format = "%(asctime)s [%(levelname)s] %(name)s | %(message)s"

[tool.logging518.handlers.console]
class = "logging.StreamHandler"
formatter = "standard"
level = "INFO"
stream = "ext://sys.stderr"

[tool.logging518.root]
handlers = ["console"]
level = "INFO"
